fix(scrollbar): issues related to scrollbar position

--- a/packages/ai-chat/src/chat/components-legacy/App.scss
+++ b/packages/ai-chat/src/chat/components-legacy/App.scss
@@ -373,6 +373,7 @@ svg.cds-aichat--icon__logout--reverse {
     margin: auto;
     block-size: 100%;
     inline-size: 100%;
+    max-inline-size: chat-theme.$max-width;
   }
 }
 
